# bi-vwm-b192-vector-model

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  requirements.md
data/persistence/: most_frequent_words.json
doc/: documentation.docx
preprocessing/: REQUIREMENTS.md
preprocessing/src/: config.py  main.py  preprocessor.py  word_prunner.py
preprocessing/src/database/: create-script.sql  database.py
querying/: .gitignore  CMakeLists.txt  Doxyfile.txt  REQUIREMENTS.md  resources.qrc  run.sh
querying/resources/: style.css
querying/src/: CollectionFetcher.cpp  CollectionFetcher.h  Computor.cpp  Computor.h  Document.cpp  Document.h  DocumentWeight.cpp  DocumentWeight.h  main.cpp
querying/src/calculation/: Computor.cpp  Computor.h  Document.cpp  InvertedIndex.cpp  InvertedIndex.h  Query.cpp  SequentialSearch.cpp  SequentialSearch.h  Space.cpp  Space.h  WeightedDocument.cpp  WeightedDocument.h
querying/src/database/: Database.cpp  Database.h  Document.cpp  Document.h  DocumentCollection.cpp  DocumentCollection.h  Terms.cpp  Terms.h
querying/src/enum/: EInvertedIndex.h
querying/src/exceptions/: Exceptions.h
querying/src/inverted_index/: InputParser.cpp  InputParser.h  InvertedIndex.cpp  InvertedIndex.h  InvertedIndexJSONParser.cpp  InvertedIndexJSONParser.h
querying/src/query/: Query.h  QueryJSONParser.cpp
querying/src/space/: Query.cpp  Query.h  Space.cpp  Space.h
querying/src/ui/: MainPage.cpp  MainPage.h  Page.cpp  Page.h
querying/src/ui/forms/: mainform.cpp  mainform.h  mainform.ui
querying/src/ui/widgets/: textedit.cpp  textedit.h
querying/src/ui_wt/: MainForm.cpp  MainForm.h  MainPage.cpp  MainPage.h
querying/src/util/: ArgumentParser.cpp  ArgumentParser.h  InvertedIndexJSONParser.cpp  InvertedIndexJSONParser.h  QueryJSONParser.cpp  QueryJSONParser.h
src/: document.py
src/preprocessing/: config.py  document.py  document_encoder.py  document_parser.py  main.py  preprocessor.py  word_prunner.py
src/preprocessing/database/: create-script.sql  database.py
src/weight_calculation/: CMakeLists.txt  main.cpp  weight_calculator.py
weight_calculation/: CMakeLists.txt  REQUIREMENTS.md  build.sh  run.sh
weight_calculation/src/: main.cpp
